--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -46,7 +46,7 @@
 \newacronym[description={False discovery rate}]{fdr}{FDR}{false discovery rate}
 
 \newacronym[description={Principal component analysis}]{pca}{PCA}{principal component analysis}
-\newacronym[description={Principal component}, descriptionplural={Principal components}]{pc}{PC}{principal component}
+\newacronym[description={Principal component}, descriptionplural={Principal components}, plural ={PCs}]{pc}{PC}{principal component}
 
 \newacronym[description={Variant call format}]{vcf}{VCF}{variant call format}
 
