--- a/references.bib
+++ b/references.bib
@@ -2995,21 +2995,7 @@ year = {2013}
 }
 
 
-@article{Jallow2009,
-abstract = {We report a genome-wide association (GWA) study of severe malaria in The Gambia. The initial GWA scan included 2,500 children genotyped on the Affymetrix 500K GeneChip, and a replication study included 3,400 children. We used this to examine the performance of GWA methods in Africa. We found considerable population stratification, and also that signals of association at known malaria resistance loci were greatly attenuated owing to weak linkage disequilibrium (LD). To investigate possible solutions to the problem of low LD, we focused on the HbS locus, sequencing this region of the genome in 62 Gambian individuals and then using these data to conduct multipoint imputation in the GWA samples. This increased the signal of association, from P = 4 × 10(-7) to P = 4 × 10(-14), with the peak of the signal located precisely at the HbS causal variant. Our findings provide proof of principle that fine-resolution multipoint imputation, based on population-specific sequencing data, can substantially boost authentic GWA signals and enable fine mapping of causal variants in African populations.},
-author = {Jallow, Muminatou and Teo, Yik Ying and Small, Kerrin S. and Rockett, Kirk A. and Deloukas, Panos and Clark, Taane G. and Kivinen, Katja and Bojang, Kalifa A. and Conway, David J. and Pinder, Margaret and Sirugo, Giorgio and Sisay-Joof, Fatou and Usen, Stanley and Auburn, Sarah and Bumpstead, Suzannah J. and Campino, Susana and Coffey, Alison and Dunham, Andrew and Fry, Andrew E. and Green, Angela and Gwilliam, Rhian and Hunt, Sarah E. and Inouye, Michael and Jeffreys, Anna E. and Mendy, Alieu and Palotie, Aarno and Potter, Simon and Ragoussis, Jiannis and Rogers, Jane and Rowlands, Kate and Somaskantharajah, Elilan and Whittaker, Pamela and Widden, Claire and Donnelly, Peter and Howie, Bryan and Marchini, Jonathan and Morris, Andrew and Sanjoaquin, Miguel and Achidi, Eric Akum and Agbenyega, Tsiri and Allen, Angela and Amodu, Olukemi and Corran, Patrick and Djimde, Abdoulaye and Dolo, Amagana and Doumbo, Ogobara K. and Drakeley, Chris and Dunstan, Sarah and Evans, Jennifer and Farrar, Jeremy and Fernando, Deepika and Hien, Tran Tinh and Horstmann, Rolf D. and Ibrahim, Muntaser and Karunaweera, Nadira and Kokwaro, Gilbert and Koram, Kwadwo A. and Lemnge, Martha and Makani, Julie and Marsh, Kevin and Michon, Pascal and Modiano, David and Molyneux, Malcolm E. and Mueller, Ivo and Parker, Michael and Peshu, Norbert and Plowe, Christopher V. and Puijalon, Odile and Reeder, John and Reyburn, Hugh and Riley, Eleanor M. and Sakuntabhai, Anavaj and Singhasivanon, Pratap and Sirima, Sodiomon and Tall, Adama and Taylor, Terrie E. and Thera, Mahamadou and Troye-Blomberg, Marita and Williams, Thomas N. and Wilson, Michael and Kwiatkowski, Dominic P.},
-doi = {10.1038/ng.388},
-file = {:home/murraycadzow/Dropbox/Papers/ng.388.pdf:pdf},
-isbn = {1546-1718 (Electronic)$\backslash$n1061-4036 (Linking)},
-issn = {10614036},
-journal = {Nature Genetics},
-number = {6},
-pages = {657--665},
-pmid = {19465909},
-title = {{Genome-wide and fine-resolution association analysis of malaria in West Africa}},
-volume = {41},
-year = {2009}
-}
+
 
 @article{Timmann2012,
 abstract = {Malaria causes approximately one million fatalities per year, mostly among African children. Although highlighted by the strong protective effect of the sickle-cell trait, the full impact of human genetics on resistance to the disease remains largely unexplored. Genome-wide association (GWA) studies are designed to unravel relevant genetic variants comprehensively; however, in malaria, as in other infectious diseases, these studies have been only partly successful. Here we identify two previously unknown loci associated with severe falciparum malaria in patients and controls from Ghana, West Africa. We applied the GWA approach to the diverse clinical syndromes of severe falciparum malaria, thereby targeting human genetic variants influencing any step in the complex pathogenesis of the disease. One of the loci was identified on chromosome 1q32 within the ATP2B4 gene, which encodes the main calcium pump of erythrocytes, the host cells of the pathogenic stage of malaria parasites. The second was indicated by an intergenic single nucleotide polymorphism on chromosome 16q22.2, possibly linked to a neighbouring gene encoding the tight-junction protein MARVELD3. The protein is expressed on endothelial cells and might therefore have a role in microvascular damage caused by endothelial adherence of parasitized erythrocytes. We also confirmed previous reports on protective effects of the sickle-cell trait and blood group O. Our findings underline the potential of the GWA approach to provide candidates for the development of control measures against infectious diseases in humans.},
@@ -4222,4 +4208,168 @@ title = {{Genomic regions exhibiting positive selection identified from dense ge
 url = {http://genome.cshlp.org/content/15/11/1553.short http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1310643{\&}tool=pmcentrez{\&}rendertype=abstract},
 volume = {15},
 year = {2005}
+}
+
+@article{Tanner2017,
+abstract = {Objective: There is no evidence for a genetic association between organic anion transporters 1–3 (SLC22A6, SLC22A7, and SLC22A8) and multidrug resistance protein 4 (MRP4; encoded by ABCC4) with the levels of serum urate or gout. The Māori and Pacific (Polynesian) population of New Zealand has the highest prevalence of gout worldwide. The aim of this study was to determine whether any Polynesian population–specific genetic variants in SLC22A6–8 and ABCC4 are associated with gout. Methods: All participants had ≥3 self-reported Māori and/or Pacific grandparents. Among the total sample set of 1,808 participants, 191 hyperuricemic and 202 normouricemic individuals were resequenced over the 4 genes, and the remaining 1,415 individuals were used for replication. Regression analyses were performed, adjusting for age, sex, and Polynesian ancestry. To study the functional effect of nonsynonymous variants of ABCC4, transport assays were performed in Xenopus laevis oocytes. Results: A total of 39 common variants were detected, with an ABCC4 variant (rs4148500) significantly associated with hyperuricemia and gout. This variant was monomorphic for the urate-lowering allele in Europeans. There was evidence for an association of rs4148500 with gout in the resequenced samples (odds ratio [OR] 1.62 [P = 0.012] ) that was replicated (OR 1.25 [P = 0.033]) and restricted to men (OR 1.43 [P = 0.001] versus OR 0.98 [P = 0.89] in women). The gout risk allele was associated with fractional excretion of uric acid in male individuals ($\beta$ = −0.570 [P = 0.01] ). A rare population-specific allele (P1036L) with predicted strong functional consequence reduced the uric acid transport activity of ABCC4 by 30{\%}. Conclusion: An association between ABCC4 and gout and fractional excretion of uric acid is consistent with the established role of MRP4 as a unidirectional renal uric acid efflux pump.},
+author = {Tanner, Callum and Boocock, James and Stahl, Eli A. and Dobbyn, Amanda and Mandal, Asim K. and Cadzow, Murray and Phipps-Green, Amanda J. and Topless, Ruth K. and Hindmarsh, Jennie Harr{\'{e}} and Stamp, Lisa K. and Dalbeth, Nicola and Choi, Hyon K. and Mount, David B. and Merriman, Tony R.},
+doi = {10.1002/art.40110},
+file = {:home/murraycadzow/Dropbox/Papers/Tanner{\_}et{\_}al-2017-Arthritis{\_}Rheumatology.pdf:pdf},
+issn = {23265205},
+journal = {Arthritis and Rheumatology},
+number = {7},
+pages = {1461--1469},
+pmid = {28371506},
+title = {{Population-Specific Resequencing Associates the ATP-Binding Cassette Subfamily C Member 4 Gene With Gout in New Zealand Māori and Pacific Men}},
+volume = {69},
+year = {2017}
+}
+
+@article{Lu2015,
+abstract = {Hypertension is a common disorder and the leading risk factor for cardiovascular disease and premature deaths worldwide. Genome-wide association studies (GWASs) in the European population have identified multiple chromosomal regions associated with blood pressure, and the identified loci altogether explain only a small fraction of the variance for blood pressure. The differences in environmental exposures and genetic background between Chinese and European populations might suggest potential different pathways of blood pressure regulation. To identify novel genetic variants affecting blood pressure variation, we conducted a meta-analysis of GWASs of blood pressure and hypertension in 11 816 subjects followed by replication studies including 69 146 additional individuals. We identified genome-wide significant (P {\textless} 5.0 × 10(-8)) associations with blood pressure, which included variants at three new loci (CACNA1D, CYP21A2, and MED13L) and a newly discovered variant near SLC4A7. We also replicated 14 previously reported loci, 8 (CASZ1, MOV10, FGF5, CYP17A1, SOX6, ATP2B1, ALDH2, and JAG1) at genome-wide significance, and 6 (FIGN, ULK4, GUCY1A3, HFE, TBX3-TBX5, and TBX3) at a suggestive level of P = 1.81 × 10(-3) to 5.16 × 10(-8). These findings provide new mechanistic insights into the regulation of blood pressure and potential targets for treatments.},
+author = {Lu, Xiangfeng and Wang, Laiyuan and Lin, Xu and Huang, Jianfeng and Charles gu, C. and He, Meian and Shen, Hongbing and He, Jiang and Zhu, Jingwen and Li, Huaixing and Hixson, James E. and Wu, Tangchun and Dai, Juncheng and Lu, Ling and Shen, Chong and Chen, Shufeng and He, Lin and Mo, Zengnan and Hao, Yongchen and Mo, Xingbo and Yang, Xueli and Li, Jianxin and Cao, Jie and Chen, Jichun and Fan, Zhongjie and Li, Ying and Zhao, Liancheng and Li, Hongfan and Lu, Fanghong and Yao, Cailiang and Yu, Lin and Xu, Lihua and Mu, Jianjun and Wu, Xianping and Deng, Ying and Hu, Dongsheng and Zhang, Weidong and Ji, Xu and Guo, Dongshuang and Guo, Zhirong and Zhou, Zhengyuan and Yang, Zili and Wang, Renping and Yang, Jun and Zhou, Xiaoyang and Yan, Weili and Sun, Ninglingh and Gao, Pingjin and Gu, Dongfeng},
+doi = {10.1093/hmg/ddu478},
+file = {:home/murraycadzow/Dropbox/Papers/ddu478.pdf:pdf},
+isbn = {1460-2083 (Electronic)$\backslash$r0964-6906 (Linking)},
+issn = {14602083},
+journal = {Human Molecular Genetics},
+number = {3},
+pages = {865--874},
+pmid = {25249183},
+title = {{Genome-wide association study in Chinese identifies novel loci for blood pressure and hypertension}},
+volume = {24},
+year = {2015}
+}
+
+
+@article{Warren2017,
+abstract = {Elevated blood pressure is the leading heritable risk factor for cardiovascular disease worldwide. We report genetic association of blood pressure (systolic, diastolic, pulse pressure) among UK Biobank participants of European ancestry with independent replication in other cohorts, and robust validation of 107 independent loci. We also identify new independent variants at 11 previously reported blood pressure loci. In combination with results from a range of in silico functional analyses and wet bench experiments, our findings highlight new biological pathways for blood pressure regulation enriched for genes expressed in vascular tissues and identify potential therapeutic targets for hypertension. Results from genetic risk score models raise the possibility of a precision medicine approach through early lifestyle intervention to offset the impact of blood pressure-raising genetic variants on future cardiovascular disease risk.},
+author = {Warren, Helen R. and Evangelou, Evangelos and Cabrera, Claudia P. and Gao, He and Ren, Meixia and Mifsud, Borbala and Ntalla, Ioanna and Surendran, Praveen and Liu, Chunyu and Cook, James P. and Kraja, Aldi T. and Drenos, Fotios and Loh, Marie and Verweij, Niek and Marten, Jonathan and Karaman, Ibrahim and {Segura Lepe}, Marcelo P. and O'Reilly, Paul F. and Knight, Joanne and Snieder, Harold and Kato, Norihiro and He, Jiang and {Shyong Tai}, E. and {Abdullah Said}, M. and Porteous, David and Alver, Maris and Poulter, Neil and Farrall, Martin and Gansevoort, Ron T. and Padmanabhan, Sandosh and M{\"{a}}gi, Reedik and Stanton, Alice and Connell, John and Bakker, Stephan J.L. and Metspalu, Andres and Shields, Denis C. and Thom, Simon and Brown, Morris and Sever, Peter and Esko, T{\~{o}}nu and Hayward, Caroline and van der Harst, Pim and Saleheen, Danish and Chowdhury, Rajiv and Chambers, John C. and Chasman, Daniel I. and Chakravarti, Aravinda and Newton-Cheh, Christopher and Lindgren, Cecilia M. and Levy, Daniel and Kooner, Jaspal S. and Keavney, Bernard and Tomaszewski, Maciej and Samani, Nilesh J. and Howson, Joanna M.M. and Tobin, Martin D. and Munroe, Patricia B. and Ehret, Georg B. and Wain, Louise V. and Barnes, Michael R. and Tzoulaki, Ioanna and Caulfield, Mark J. and Elliott, Paul and Wain, V. and Vaez, Ahmad and Jansen, Rick and Joehanes, Roby and van der Most, Peter J. and {Mesut Erzurumluoglu}, A. and O'Reilly, Paul and Rose, Lynda M. and Verwoert, Germaine C. and Hottenga, Jouke Jan and Strawbridge, Rona J. and Esko, Tonu and Arking, Dan E. and Hwang, Shih Jen and Guo, Xiuqing and Kutalik, Zoltan and Trompet, Stella and Shrine, Nick and Teumer, Alexander and Ried, Janina S. and Bis, Joshua C. and Smith, Albert V. and Amin, Najaf and Nolte, Ilja M. and Lyytik{\"{a}}inen, Leo Pekka and Mahajan, Anubha and Wareham, Nicholas J. and Hofer, Edith and Joshi, Peter K. and Kristiansson, Kati and Traglia, Michela and Havulinna, Aki S. and Goel, Anuj and Nalls, Mike A. and S{\~{o}}ber, Siim and Vuckovic, Dragana and Luan, Jian'an and {Fabiola Del Greco}, M. and Ayers, Kristin L. and Marrugat, Jaume and Ruggiero, Daniela and Lopez, Lorna M. and Niiranen, Teemu and Enroth, Stefan and Jackson, Anne U. and Nelson, Christopher P. and Huffman, Jennifer E. and Zhang, Weihua and Gandin, Ilaria and Harris, Sarah E. and Zemonik, Tatijana and Lu, Yingchang and Shah, Nabi and de Borst, Martin H. and Mangino, Massimo and Prins, Bram P. and Campbell, Archie and Li-Gao, Ruifang and Chauhan, Ganesh and Oldmeadow, Christopher and Abecasis, Gon{\c{c}}alo and Abedi, Maryam and Barbieri, Caterina M. and Batini, Chiara and Blake, Tineka and Boehnke, Michael and Bottinger, Erwin P. and Braund, Peter S. and Brumat, Marco and Campbell, Harry and Cocca, Massimiliano and Collins, Francis and Cordell, Heather J. and Damman, Jeffrey J. and Davies, Gail and de Geus, Eco J. and de Mutsert, Ren{\'{e}}e and Deelen, Joris and Demirkale, Yusuf and Doney, Alex S.F. and D{\"{o}}rr, Marcus and Ferreira, Teresa and Fr{\aa}nberg, Mattias and Giedraitis, Vilmantas and Gieger, Christian and Giulianini, Franco and Gow, Alan J. and Hamsten, Anders and Harris, Tamara B. and Hofman, Albert and Holliday, Elizabeth G. and Jarvelin, Marjo Riitta and Johansson, {\AA}sa and Johnson, Andrew D. and Jousilahti, Pekka and Jula, Antti and K{\"{a}}h{\"{o}}nen, Mika and Kathiresan, Sekar and Khaw, Kay Tee and Kolcic, Ivana and Koskinen, Seppo and Langenberg, Claudia and Larson, Marty and Launer, Lenore J. and Lehne, Benjamin and Liewald, David C.M. and Lin, Li and Lind, Lars and Mach, Fran{\c{c}}ois and Mamasoula, Chrysovalanto and Menni, Cristina and Milaneschi, Yuri and Morgan, Anna and Morris, Andrew D. and Morrison, Alanna C. and Munson, Peter J. and Nandakumar, Priyanka and Nguyen, Quang Tri and Nutile, Teresa and Oldehinkel, Albertine J. and Oostra, Ben A. and Org, Elin and Palotie, Aarno and Par{\'{e}}, Guillaume and Pattie, Alison and Penninx, Brenda W.J.H. and Pramstaller, Peter P. and Raitakari, Olli T. and Rice, Kenneth and Ridker, Paul M. and Riese, Harri{\"{e}}tte and Ripatti, Samuli and Robino, Antonietta and Rotter, Jerome I. and Rudan, Igor and Saba, Yasaman and {Saint Pierre}, Aude and Sala, Cinzia F. and Sarin, Antti Pekka and Schmidt, Reinhold and Scott, Rodney and Seelen, Marc A. and Siscovick, David and Sorice, Rossella and Stott, David J. and Sundstr{\"{o}}m, Johan and Swertz, Morris and Taylor, Kent D. and Tzourio, Christophe and Uitterlinden, Andr{\'{e}} G. and V{\"{o}}lker, Uwe and Vollenweider, Peter and Wild, Sarah and Willemsen, Gonneke and Wright, Alan F. and Yao, Jie and Th{\'{e}}riault, S{\'{e}}bastien and Conen, David and John, Attia and Debette, St{\'{e}}phanie and Mook-Kanamori, Dennis O. and Zeggini, Eleftheria and Spector, Tim D. and Palmer, Colin N.A. and Vergnaud, Anne Claire and Loos, Ruth J.F. and Polasek, Ozren and Starr, John M. and Girotto, Giorgia and Lindgren, Cecila M. and Vitart, Veronique and Tuomilehto, Jaakko and Gyllensten, Ulf and Knekt, Paul and Deary, Ian J. and Ciullo, Marina and Elosua, Roberto and Keavney, Bernard D. and Hicks, Andrew A. and Scott, Robert A. and Gasparini, Paolo and Laan, Maris and Liu, Yong Mei and Watkins, Hugh and Hartman, Catharina A. and Salomaa, Veikko and Toniolo, Daniela and Perola, Markus and Wilson, James F. and Schmidt, Helena and Zhao, Jing Hua and Lehtim{\"{a}}ki, Terho and van Duijn, Cornelia M. and Gudnason, Vilmundur and Psaty, Bruce M. and Peters, Annette and Rettig, Rainer and James, Alan and {Wouter Jukema}, J. and Strachan, David P. and Palmas, Walter and Ingelsson, Erik and Boomsma, Dorret I. and Franco, Oscar H. and Bochud, Murielle and Morris, Andrew P.},
+doi = {10.1038/ng.3768},
+file = {:home/murraycadzow/Dropbox/Papers/ng.3768.pdf:pdf},
+issn = {15461718},
+journal = {Nature Genetics},
+number = {3},
+pages = {403--415},
+pmid = {28135244},
+title = {{Genome-wide association analysis identifies novel blood pressure loci and offers biological insights into cardiovascular risk}},
+volume = {49},
+year = {2017}
+}
+
+
+@article{Lai2012,
+abstract = {OBJECTIVE: To explore the causal relationship between gout and Type 2 diabetes based on genetic evidence and national outpatient database. METHODS: Twenty male gout patients with early-onset, gout family history, without a habit of alcohol consumption or obesity before the first attack of gout were selected from hospital in 2010; and 42 unrelated male Chinese subjects were selected from HapMap as controls for genome-wide analysis study (GWAS). The comorbid diseases with gout were revealed by applying the significant single nucleotide polymorphisms (SNPs) to MetaCore platform, and the comorbid relationship was analysed by standardized incidence ratio (SIR) from outpatient database. RESULTS: A total of 334 SNPs were significantly related to gout in GWAS (P {\textless} 10(-7)), and Type 2 diabetes was the most significantly associated disease with gout as recognized by 36 gene symbols correspondent to the above significant SNPs. The analysis of national outpatient database showed that the overall incident Type 2 diabetes was 1.50 cases per 1000 person-months among gout patients, which was higher than the overall incident gout (1.06 cases) among Type 2 diabetes. The age-adjusted SIR of incident Type 2 diabetes among gout was 2.59 (95{\%} CI 2.42, 2.78), whereas the age-adjusted SIR for incident gout among Type 2 diabetes was 1.61 (95{\%} CI 1.48, 1.74). CONCLUSION: After excluding obesity and alcohol consumption behaviour, this study showed that patients with gout and Type 2 diabetes shared the common genetic factors most, and that there existed a mutual inter-dependent effect on higher incidences.},
+author = {Lai, Han Ming and Chen, Chung Jen and Su, Ben Yu Jih and Chen, Ying Chou and Yu, Shan Fu and Yen, Jeng Hsien and Hsieh, Ming Chia and Cheng, Tien Tsai and Chang, Shun Jen},
+doi = {10.1093/rheumatology/ker373},
+file = {:home/murraycadzow/Dropbox/Papers/ker373.pdf:pdf},
+isbn = {1462-0332 (Electronic)$\backslash$n1462-0324 (Linking)},
+issn = {14620324},
+journal = {Rheumatology},
+keywords = {Early onset,Genetic epidemiology,Genetic risk factor,Genome-wide analysis study,Gout,Incidence,Male,National health insurance,Outpatient records,Type 2 diabetes},
+number = {4},
+pages = {715--720},
+pmid = {22179738},
+title = {{Gout and type 2 diabetes have a mutual inter-dependent effect on genetic risk factors and higher incidences}},
+volume = {51},
+year = {2012}
+}
+
+@article{Arking2014,
+abstract = {The QT interval, an electrocardiographic measure reflecting myocardial repolarization, is a heritable trait. QT prolongation is a risk factor for ventricular arrhythmias and sudden cardiac death (SCD) and could indicate the presence of the potentially lethal mendelian long-QT syndrome (LQTS). Using a genome-wide association and replication study in up to 100,000 individuals, we identified 35 common variant loci associated with QT interval that collectively explain ∼8-10{\%} of QT-interval variation and highlight the importance of calcium regulation in myocardial repolarization. Rare variant analysis of 6 new QT interval-associated loci in 298 unrelated probands with LQTS identified coding variants not found in controls but of uncertain causality and therefore requiring validation. Several newly identified loci encode proteins that physically interact with other recognized repolarization proteins. Our integration of common variant association, expression and orthogonal protein-protein interaction screens provides new insights into cardiac electrophysiology and identifies new candidate genes for ventricular arrhythmias, LQTS and SCD.},
+author = {Arking, Dan E. and Pulit, Sara L. and Crotti, Lia and {Van Der Harst}, Pim and Munroe, Patricia B. and Koopmann, Tamara T. and Sotoodehnia, Nona and Rossin, Elizabeth J. and Morley, Michael and Wang, Xinchen and Johnson, Andrew D. and Lundby, Alicia and Gudbjartsson, Dan{\'{i}}el F. and Noseworthy, Peter A. and Eijgelsheim, Mark and Bradford, Yuki and Tarasov, Kirill V. and D{\"{o}}rr, Marcus and M{\"{u}}ller-Nurasyid, Martina and Lahtinen, Annukka M. and Nolte, Ilja M. and Smith, Albert Vernon and Bis, Joshua C. and Isaacs, Aaron and Newhouse, Stephen J. and Evans, Daniel S. and Post, Wendy S. and Waggott, Daryl and Lyytik{\"{a}}inen, Leo Pekka and Hicks, Andrew A. and Eisele, Lewin and Ellinghaus, David and Hayward, Caroline and Navarro, Pau and Ulivi, Sheila and Tanaka, Toshiko and Tester, David J. and Chatel, St{\'{e}}phanie and Gustafsson, Stefan and Kumari, Meena and Morris, Richard W. and Naluai, Asa T. and Padmanabhan, Sandosh and Kluttig, Alexander and Strohmer, Bernhard and Panayiotou, Andrie G. and Torres, Maria and Knoflach, Michael and Hubacek, Jaroslav A. and Slowikowski, Kamil and Raychaudhuri, Soumya and Kumar, Runjun D. and Harris, Tamara B. and Launer, Lenore J. and Shuldiner, Alan R. and Alonso, Alvaro and Bader, Joel S. and Ehret, Georg and Huang, Hailiang and Kao, W. H.Linda and Strait, James B. and Macfarlane, Peter W. and Brown, Morris and Caulfield, Mark J. and Samani, Nilesh J. and Kronenberg, Florian and Willeit, Johann and Smith, J. Gustav and Greiser, Karin H. and {Zu Schwabedissen}, Henriette Meyer and Werdan, Karl and Carella, Massimo and Zelante, Leopoldo and Heckbert, Susan R. and Psaty, Bruce M. and Rotter, Jerome I. and Kolcic, Ivana and Pola{\v{s}}ek, Ozren and Wright, Alan F. and Griffin, Maura and Daly, Mark J. and Arnar, David O. and H{\'{o}}lm, Hilma and Thorsteinsdottir, Unnur and Denny, Joshua C. and Roden, Dan M. and Zuvich, Rebecca L. and Emilsson, Valur and Plump, Andrew S. and Larson, Martin G. and O'Donnell, Christopher J. and Yin, Xiaoyan and Bobbo, Marco and D'Adamo, Adamo P. and Iorio, Annamaria and Sinagra, Gianfranco and Carracedo, Angel and Cummings, Steven R. and Nalls, Michael A. and Jula, Antti and Kontula, Kimmo K. and Marjamaa, Annukka and Oikarinen, Lasse and Perola, Markus and Porthan, Kimmo and Erbel, Raimund and Hoffmann, Per and J{\"{o}}ckel, Karl Heinz and K{\"{a}}lsch, Hagen and N{\"{o}}then, Markus M. and {Den Hoed}, Marcel and Loos, Ruth J.F. and Thelle, Dag S. and Gieger, Christian and Meitinger, Thomas and Perz, Siegfried and Peters, Annette and Prucha, Hanna and Sinner, Moritz F. and Waldenberger, Melanie and {De Boer}, Rudolf A. and Franke, Lude and {Van Der Vleuten}, Pieter A. and Beckmann, Britt Maria and Martens, Eimo and Bardai, Abdennasser and Hofman, Nynke and Wilde, Arthur A.M. and Behr, Elijah R. and Dalageorgou, Chrysoula and Giudicessi, John R. and Medeiros-Domingo, Argelia and Barc, Julien and Kyndt, Florence and Probst, Vincent and Ghidoni, Alice and Insolia, Roberto and Hamilton, Robert M. and Scherer, Stephen W. and Brandimarto, Jeffrey and Margulies, Kenneth and Moravec, Christine E. and {Del Greco M}, Fabiola and Fuchsberger, Christian and O'Connell, Jeffrey R. and Lee, Wai K. and Watt, Graham C.M. and Campbell, Harry and Wild, Sarah H. and {El Mokhtari}, Nour E. and Frey, Norbert and Asselbergs, Folkert W. and Leach, Irene Mateo and Navis, Gerjan and {Van Den Berg}, Maarten P. and {Van Veldhuisen}, Dirk J. and Kellis, Manolis and Krijthe, Bouwe P. and Franco, Oscar H. and Hofman, Albert and Kors, Jan A. and Uitterlinden, Andr{\'{e}} G. and Witteman, Jacqueline C.M. and Kedenko, Lyudmyla and Lamina, Claudia and Oostra, Ben A. and Abecasis, Gon{\c{c}}alo R. and Lakatta, Edward G. and Mulas, Antonella and Orr{\'{u}}, Marco and Schlessinger, David and Uda, Manuela and Markus, Marcello R.P. and V{\"{o}}lker, Uwe and Snieder, Harold and Spector, Timothy D. and {\"{A}}rnl{\"{o}}v, Johan and Lind, Lars and Sundstr{\"{o}}m, Johan and Syv{\"{a}}nen, Ann Christine and Kivimaki, Mika and K{\"{a}}h{\"{o}}nen, Mika and Mononen, Nina and Raitakari, Olli T. and Viikari, Jorma S. and Adamkova, Vera and Kiechl, Stefan and Brion, Maria and Nicolaides, Andrew N. and Paulweber, Bernhard and Haerting, Johannes and Dominiczak, Anna F. and Nyberg, Fredrik and Whincup, Peter H. and Hingorani, Aroon D. and Schott, Jean Jacques and Bezzina, Connie R. and Ingelsson, Erik and Ferrucci, Luigi and Gasparini, Paolo and Wilson, James F. and Rudan, Igor and Franke, Andre and M{\"{u}}hleisen, Thomas W. and Pramstaller, Peter P. and Lehtim{\"{a}}ki, Terho J. and Paterson, Andrew D. and Parsa, Afshin and Liu, Yongmei and {Van Duijn}, Cornelia M. and Siscovick, David S. and Gudnason, Vilmundur and Jamshidi, Yalda and Salomaa, Veikko and Felix, Stephan B. and Sanna, Serena and Ritchie, Marylyn D. and Stricker, Bruno H. and Stefansson, Kari and Boyer, Laurie A. and Cappola, Thomas P. and Olsen, Jesper V. and Lage, Kasper and Schwartz, Peter J. and K{\"{a}}{\"{a}}b, Stefan and Chakravarti, Aravinda and Ackerman, Michael J. and Pfeufer, Arne and {De Bakker}, Paul I.W. and Newton-Cheh, Christopher},
+doi = {10.1038/ng.3014},
+file = {:home/murraycadzow/Dropbox/Papers/nihms600569.pdf:pdf},
+isbn = {1546-1718 (Electronic)$\backslash$r1061-4036 (Linking)},
+issn = {15461718},
+journal = {Nature Genetics},
+keywords = {arrhythmias,genome-wide association study,long qt syndrome,myocardial repolarization,qt interval,sudden cardiac death},
+number = {8},
+pages = {826--836},
+pmid = {24952745},
+title = {{Genetic association study of QT interval highlights role for calcium signaling pathways in myocardial repolarization}},
+volume = {46},
+year = {2014}
+}
+
+@article{zhang2016associations,
+author = {Zhang, Yao and Liu, Kai and Ma, Lifeng and Liu, Kangping and Shi, Xugang and Zhang, Yuan and He, Na and Zhao, Yiduo and Zhu, Xikai and Jin, Tianbo and Others},
+journal = {Int J Clin Exp Pathol},
+number = {7},
+pages = {7503--7517},
+title = {{Associations of gout with polymorphisms in SLC2A9, WDR1, CLNK, PKD2, and ABCG2 in Chinese Han and Tibetan populations}},
+volume = {9},
+year = {2016}
+}
+
+
+@article{Pritchard2000,
+abstract = {We describe a model-based clustering method for using multilocus genotype data to infer population structure and assign individuals to populations. We assume a model in which there are K populations (where K may be unknown), each of which is characterized by a set of allele frequencies at each locus. Individuals in the sample are assigned (probabilistically) to populations, or jointly to two or more populations if their genotypes indicate that they are admixed. Our model does not assume a particular mutation process, and it can be applied to most of the commonly used genetic markers, provided that they are not closely linked. Applications of our method include demonstrating the presence of population structure, assigning individuals to populations, studying hybrid zones, and identifying migrants and admixed individuals. We show that the method can produce highly accurate assignments using modest numbers of loci-e.g. , seven microsatellite loci in an example using genotype data from an endangered bird species. The software used for this article is available from http://www.stats.ox.ac.uk/ approximately pritch/home. html.},
+author = {Pritchard, J K and Stephens, M and Donnelly, P},
+doi = {10.1111/j.1471-8286.2007.01758.x},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Pritchard, Stephens, Donnelly - 2000 - Inference of Population Structure Using Multilocus Genotype Data.pdf:pdf},
+isbn = {0016-6731},
+issn = {0016-6731},
+journal = {Genetics},
+month = {jun},
+number = {2},
+pages = {945--59},
+pmid = {10835412},
+title = {{Inference of population structure using multilocus genotype data.}},
+url = {http://doi.wiley.com/10.1111/j.1471-8286.2007.01758.x http://www.ncbi.nlm.nih.gov/pubmed/10835412 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC1461096},
+volume = {155},
+year = {2000}
+}
+
+@article{Patterson2006,
+abstract = {Current methods for inferring population structure from genetic data do not provide formal significance tests for population differentiation. We discuss an approach to studying population structure (principal components analysis) that was first applied to genetic data by Cavalli-Sforza and colleagues. We place the method on a solid statistical footing, using results from modern statistics to develop formal significance tests. We also uncover a general "phase change" phenomenon about the ability to detect structure in genetic data, which emerges from the statistical theory we use, and has an important implication for the ability to discover structure in genetic data: for a fixed but large dataset size, divergence between two populations (as measured, for example, by a statistic like FST) below a threshold is essentially undetectable, but a little above threshold, detection will be easy. This means that we can predict the dataset size needed to detect structure.},
+author = {Patterson, Nick and Price, Alkes L and Reich, David},
+doi = {10.1371/journal.pgen.0020190},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Patterson, Price, Reich - 2006 - Population structure and eigenanalysis.pdf:pdf},
+issn = {1553-7404},
+journal = {PLoS genetics},
+keywords = {Computer Simulation,Computer Simulation: statistics {\&} numerical data,Genetic Markers,Genetic Variation,Genetics, Medical,Genetics, Medical: methods,Genetics, Medical: statistics {\&} numerical data,Genetics, Population,Genetics, Population: methods,Genetics, Population: statistics {\&} numerical data,Humans,Models, Genetic,Models, Statistical,Principal Component Analysis,Principal Component Analysis: methods},
+mendeley-groups = {Demography and Structure},
+month = {dec},
+number = {12},
+pages = {e190},
+pmid = {17194218},
+title = {{Population structure and eigenanalysis.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1713260{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {2},
+year = {2006}
+}
+
+@article{Morris2011,
+abstract = {The detection of loci contributing effects to complex human traits, and their subsequent fine-mapping for the location of causal variants, remains a considerable challenge for the genetics research community. Meta-analyses of genomewide association studies, primarily ascertained from European-descent populations, have made considerable advances in our understanding of complex trait genetics, although much of their heritability is still unexplained. With the increasing availability of genomewide association data from diverse populations, transethnic meta-analysis may offer an exciting opportunity to increase the power to detect novel complex trait loci and to improve the resolution of fine-mapping of causal variants by leveraging differences in local linkage disequilibrium structure between ethnic groups. However, we might also expect there to be substantial genetic heterogeneity between diverse populations, both in terms of the spectrum of causal variants and their allelic effects, which cannot easily be accommodated through traditional approaches to meta-analysis. In order to address this challenge, I propose novel transethnic meta-analysis methodology that takes account of the expected similarity in allelic effects between the most closely related populations, while allowing for heterogeneity between more diverse ethnic groups. This approach yields substantial improvements in performance, compared to fixed-effects meta-analysis, both in terms of power to detect association, and localization of the causal variant, over a range of models of heterogeneity between ethnic groups. Furthermore, when the similarity in allelic effects between populations is well captured by their relatedness, this approach has increased power and mapping resolution over random-effects meta-analysis.},
+author = {Morris, Andrew P.},
+doi = {10.1002/gepi.20630},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Morris - 2011 - Transethnic meta-analysis of genomewide association studies.pdf:pdf},
+isbn = {1098-2272 (Electronic)$\backslash$r0741-0395 (Linking)},
+issn = {07410395},
+journal = {Genetic Epidemiology},
+keywords = {Bayesian partition model,Diverse populations,Fine-mapping,Genomewide association study,Meta-analysis,Transethnic},
+number = {8},
+pages = {809--822},
+pmid = {22125221},
+title = {{Transethnic meta-analysis of genomewide association studies}},
+volume = {35},
+year = {2011}
+}
+
+@article{Hellenthal2014,
+abstract = {Modern genetic data combined with appropriate statistical methods have the potential to contribute substantially to our understanding of human history. We have developed an approach that exploits the genomic structure of admixed populations to date and characterize historical mixture events at fine scales. We used this to produce an atlas of worldwide human admixture history, constructed using genetic data alone and encompassing over 100 events occurring over the past 4,000 years. We identify events whose dates and participants suggest they describe genetic impacts of the Mongol Empire, Arab slave trade, Bantu expansion, first millennium CE migrations in eastern Europe, and European colonialism, as well as unrecorded events, revealing admixture to be an almost universal force shaping human populations.},
+author = {Hellenthal, G. and Busby, G. B. J. and Band, G. and Wilson, J. F. and Capelli, C. and Falush, D. and Myers, S.},
+doi = {10.1126/science.1243518},
+file = {:home/murraycadzow/Dropbox/Papers/Hellenthal2014.pdf:pdf},
+isbn = {1095-9203 (Electronic)$\backslash$r0036-8075 (Linking)},
+issn = {0036-8075},
+journal = {Science},
+number = {6172},
+pages = {747--751},
+pmid = {24531965},
+title = {{A Genetic Atlas of Human Admixture History}},
+url = {http://www.sciencemag.org/cgi/doi/10.1126/science.1243518},
+volume = {343},
+year = {2014}
 }
